@@ -1,5 +1,6 @@
 LITT Changelog:
 ===============
+ * 2019-09-14: Alias toSecondsValue and toIdValue to toULongLong instead of calling it.
  * 2019-09-14: Factored out QueryBuilder base class from OutputQuery and used it for write queries.
  * 2019-09-14: Added confirmf, executeWriteSqlf and made executeInsert "f" to avoid overuse of fmt.
  * 2019-09-14: Uses S() macro to get c_str() value of std::string in format functions, easier to read.
